--- a/nodejs/simple-server/package.json
+++ b/nodejs/simple-server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "jquery": "^3.6.0"
   }
 }
