--- a/servlet/src/main/webapp/WEB-INF/web.xml
+++ b/servlet/src/main/webapp/WEB-INF/web.xml
@@ -21,4 +21,16 @@
 		<filter-name>EncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<servlet>
+		<servlet-name>StudentServlet</servlet-name>
+		<servlet-class>com.scci.servlet.StudentServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>StudentServlet</servlet-name>
+		<url-pattern>/StudentServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
+
+
+
