--- a/servlet/src/main/webapp/WEB-INF/web.xml
+++ b/servlet/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,16 @@
 		<servlet-name>LegacyServlet</servlet-name>
 		<url-pattern>/LegacyServlet</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>InitParamServlet</servlet-name>
+		<servlet-class>com.scci.servlet.InitParamServlet</servlet-class>
+		<init-param>encoding</init-param>
+		<init-value>utf-8</init-value>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>InitParamServlet</servlet-name>
+		<url-pattern>/InitParamServlet</url-pattern>
+	</servlet-mapping>
 	<!-- 에러처리를 위한 서블릿 -->
 	<servlet>
 		<servlet-name>ErrorServlet</servlet-name>
