--- a/java/UsingDynamic/src/main/webapp/WEB-INF/web.xml
+++ b/java/UsingDynamic/src/main/webapp/WEB-INF/web.xml
@@ -17,8 +17,7 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-        /WEB-INF/servlet-context.xml
-        classpath*:/config/context-*.xml
+			/WEB-INF/config/mybatis.xml
         </param-value>
     </context-param>
 
@@ -27,7 +26,9 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value></param-value>
+            <param-value>
+                    /WEB-INF/servlet-context.xml
+            </param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
