--- a/servlet/src/main/webapp/WEB-INF/web.xml
+++ b/servlet/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,14 @@
 		<filter-name>EncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<filter>
+		<filter-name>UserFilter</filter-name>
+		<filter-class>com.scci.servlet.UserFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>UserFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	
 	<servlet>
 		<servlet-name>StudentServlet</servlet-name>
