--- a/java/summer/pom.xml
+++ b/java/summer/pom.xml
@@ -36,6 +36,17 @@
 			<artifactId>spring-aspects</artifactId>
 			<version>5.2.0.RELEASE</version>
 		</dependency>
+		<!-- logging 처리를 위한 dependency -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
