--- a/java/runaway/src/main/webapp/WEB-INF/web.xml
+++ b/java/runaway/src/main/webapp/WEB-INF/web.xml
@@ -8,10 +8,12 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value></param-value>
-	</context-param>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+			/WEB-INF/config/mybatis.xml
+        </param-value>
+    </context-param>
 	<servlet>
 		<servlet-name>app</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
