--- a/java/UsingDynamic/pom.xml
+++ b/java/UsingDynamic/pom.xml
@@ -137,6 +137,20 @@
 			<artifactId>HikariCP</artifactId>
 			<version>3.4.1</version>
 		</dependency>
+		
+		<!-- spring security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 
 	</dependencies>
 
