--- a/java/UsingDynamic/src/main/webapp/WEB-INF/web.xml
+++ b/java/UsingDynamic/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,7 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
+            /WEB-INF/config/security-context.xml 
 			/WEB-INF/config/mybatis.xml
         </param-value>
     </context-param>
@@ -38,6 +39,7 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
     
+    
     	<!-- 한글 깨짐 방지 처리 -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
@@ -53,6 +55,17 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+    <!--  Spring Security Filter -->
+	<filter>
+	     <filter-name>springSecurityFilterChain</filter-name>
+	     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 </web-app>
